Bug 152370. Active Accessibility: correct accessible value for XUL listbox and combobox. r=kyle, sr=jst.